 Fixed: 	Fixed IDs renaming in MSIE (JS object content type case)
 Fixed: 	Odd MSIE bug fixed with displaying forms on second modalbox calls
 Fixed: 	Added makePositioned to fix MSIE display issues with variable height
 Fixed: 	Added a workaround for content flickering in Firefox 
 Fixed: 	_putContent method modified to support callbacks properly. [#100]

ver 1.5.5.1 (09/21/2007)
 Added: 	If title options is set to 'false' the Modalbox header will not shown
 Fixed: 	Toggle SELECTs visibility in IE for cloned node approach [#125]
 Fixed: 	Critical odd bug with Safari 2 in the _setFocus method fixed

ver 1.5.5 (09/06/2007)
 Added: 	Modalbox can override standard alert messages. Use overrideAlert to toggle this feature on/off.
 Added: 	Added an option to toggle animated transitions on/off [#98]
 Added: 	Proper node clone IDs cleanup on hide [#120]. Unit-tests changes accordingly
 Changed: 	Default transition intervals changed
 Changed: 	_update method re-factored
 Changed: 	_findFocusableElements method re-factored to exclude hidden inputs
 Changed: 	Moving focus in direct and reverse order (by Shift+TAB combo)
 Fixed: 	On resize modalbox contents were stretched to 90px if height wasn't defined
 Fixed: 	Overlay initial flicker effect removed [#104]
 Fixed: 	Evaluating javascripts after loading the content fixed [#100]
 Fixed: 	Re-factored SELECTs toggle method for IEs [#111]
 Fixed: 	Focusing by TAB key issue in Safari [#3]
 Fixed: 	Potential issues with DOM node content type then using IDs from parent node [#120]
 Fixed: 	Content isn't being shown in IE6 then transitions are switched off
 Fixed: 	Added expression in resize effect [#114]

ver 1.5.4 (07/16/2007)
 Added: 	Overlay opacity parameter added
 Added: 	ModalBox now accepts HTML (plain & object) as a content parameter [#21]
 Added: 	Defining height now switches ModalBox to 'scrollable' viewport state [#26]
 Added: 	ModalBox resizes automatically to fit content height [#26]