@@ -8,6 +8,7 @@ ver 1.5.6 (10/09/2007)
  Fixed: 	Added makePositioned to fix MSIE display issues with variable height
  Fixed: 	Added a workaround for content flickering in Firefox 
  Fixed: 	_putContent method modified to support callbacks properly. [#100]
+ Fixed: 	_removeElements method fixed - IDs reverted properly for original content
 
 ver 1.5.5.1 (09/21/2007)
  Added: 	If title options is set to 'false' the Modalbox header will not shown
